# AIPOTranslator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  vcpkg.json
poForTests/ru/: ForTestTranslation.po  RightTranslation.po
source/: POTranlator.h  POTranslator.cpp  Utility.cpp  Utility.h  main.cpp
source/Config/: Config.cpp  Config.h
source/UI/: ImGuiManager.cpp  ImGuiManager.h
tests/: main.cpp
